fixed a css validator issue on .about__content; changed gap 20pxs to 20px

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -41,10 +41,10 @@
 .about__title{
     max-width: 251px;
     margin: 100px 0 0 80px;
-    font-family: "Inter"; 
-    font-style: normal; 
-    font-weight: 500; 
-    font-size: 44px; 
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
     line-height: 52px;
     z-index: 1;
 }
@@ -54,13 +54,13 @@
     flex-direction: column;
     max-width: 660px;
     margin: 119px 80px 173px 0;
-    gap: 20pxs;
+    gap: 20px ;
 }
 
 .about__paragraph{
-    font-family: "Noto Serif"; 
-    font-style: normal; 
-    font-weight: normal; 
-    font-size: 20px; 
+    font-family: "Noto Serif";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
     line-height: 30px;
 }
